--- a/package.json
+++ b/package.json
@@ -23,5 +23,15 @@
   "bugs": {
     "url": "https://github.com/GeoffSelby/tailwind-plugin-boilerplate/issues"
   },
-  "homepage": "https://github.com/GeoffSelby/tailwind-plugin-boilerplate#readme"
+  "homepage": "https://github.com/GeoffSelby/tailwind-plugin-boilerplate#readme",
+  "peerDependencies": {
+    "tailwindcss": "2.0.0-alpha.24 || ^2.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "jest": "^26.6.3",
+    "postcss": "^8.2.15",
+    "prettier": "^2.3.0",
+    "tailwindcss": "^2.1.2"
+  }
 }
