--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb": "^18.2.1",
     "jest": "^26.6.3",
     "postcss": "^8.2.15",
     "prettier": "^2.3.0",
